panelsystem umgestellt: klick auf abo öffnet panel in view mode, bearbeiten öffnet edit mode, + öffnet new mode, läuft.

--- a/index.html
+++ b/index.html
@@ -76,9 +76,12 @@
           </label>
 
           <div class="actions">
-            <button class="btn btn--primary" type="submit" id="submitBtn">Hinzufügen</button>
-            <button class="btn" type="button" id="cancelBtn">Abbrechen</button>
+              <button type="button" id="editBtn" class="btn--primary">Bearbeiten</button>
+              <button type="submit" id="submitBtn" class="btn btn--primary">Speichern</button>
+              <button type="button" id="deleteBtn" class="btn btn--danger">Löschen</button>
+              <button type="button" id="cancelBtn" class="btn--primary">Abbrechen</button>
           </div>
+
         </form>
       </div>
 
@@ -90,7 +93,7 @@
           <div>Zahlungsweise</div>
           <div class="right">€/Monat</div>
           <div class="center">Aktiv</div>
-          <div class="right">Aktion</div>
+<!--           <div class="right">Aktion</div> -->
         </div>
 
         <div id="empty" class="empty">Noch keine Abos hinzugefügt.</div>
