suchleiste mit funktion hinzugefügt

--- a/index.html
+++ b/index.html
@@ -143,6 +143,14 @@
 
       <!-- Liste -->
       <div class="card">
+        <div class="listToolbar">
+            <input
+                id="searchInput"
+                class="listToolbar__search"
+                type="search"
+                placeholder="Suchen nach Name, Anbieter, Kategorie…"
+            />
+        </div>
         <div class="list__head">
             <div>Abo</div>
             <div>Abbuchung</div>
