--- a/index.html
+++ b/index.html
@@ -143,6 +143,49 @@
               <option value="manual">manuell</option>
             </select>
           </label>
+          
+          <!-- Erinnerungs-Einstellungen pro Abo -->
+          <div class="fieldgroup">
+              <label class="field">
+                  <span>Erinnerungen</span>
+                  <select id="reminderMode">
+                      <option value="default">Standard-Einstellungen verwenden</option>
+                      <option value="custom">Abo-spezifische Einstellungen</option>
+                      <option value="off">Für dieses Abo aus</option>
+                  </select>
+              </label>
+
+              <div class="field field--reminderDetails" id="reminderCustomFields">
+                  <span>Vorlauf (Tage)</span>
+                  <div class="fieldgroup fieldgroup--inline">
+                      <label class="field">
+                          <span>Zahlung</span>
+                          <input
+                              id="reminderBillingCustom"
+                              type="number"
+                              min="0"
+                              step="1"
+                              inputmode="numeric"
+                          />
+                      </label>
+                      <label class="field">
+                          <span>Verlängerung</span>
+                          <input
+                              id="reminderRenewalCustom"
+                              type="number"
+                              min="0"
+                              step="1"
+                              inputmode="numeric"
+                          />
+                      </label>
+                  </div>
+              </div>
+          </div>
+
+          <label class="field">
+            <span>Notiz</span>
+            <textarea id="note" rows="3" placeholder="Infos, Vertragsnummer…"></textarea>
+          </label>
 
           <div class="fieldgroup">
             <label class="field">
