improvement der UI, buttons, View, snoozeUI und general

--- a/index.html
+++ b/index.html
@@ -244,11 +244,12 @@
           </label>
 
           <div class="actions">
-            <button type="button" id="editBtn" class="btn--primary">Bearbeiten</button>
+            <button type="button" id="editBtn" class="btn btn--primary">Bearbeiten</button>
             <button type="submit" id="submitBtn" class="btn btn--primary">Speichern</button>
             <button type="button" id="deleteBtn" class="btn btn--danger">Löschen</button>
-            <button type="button" id="cancelBtn" class="btn--primary">Schließen</button>
+            <button type="button" id="cancelBtn" class="btn btn--primary">Schließen</button>
           </div>
+
         </form>
 
       </div>
